# pangolinos

./: CHANGELOG.md  README.md  setup.cfg
pangolinos/: cli.py  fine_contour_extractor.py  polygon_extractor.py  polygonize.py  rasterize.py  render.py
pangolinos/contrib/: fix_tuples.py  visualize_polygons.py
pangolinos/templates/: alto-polygons.tmpl
