[metadata]
name = pangolinos
author = Benjamin Kiessling, johnlockejrr
author_email = mittagessen@l.unchti.me
summary = PangoLine on Steroids - Enhanced synthetic document rendering with precise polygon extraction
home_page = https://github.com/johnlockejrr/pangolinos
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache-2.0
classifier =
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: POSIX
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13

keywords =
    atr
    document rendering
    alto

[files]
packages = pangolios

[entry_points]
console_scripts =
    pangolinos = pangolinos.cli:cli

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.9
install_requires =
    click
    rich
    jinja2
    PyGObject
    pypdfium2
    lxml
    pillow
    numpy
    regex
    scipy
    scikit-image
    shapely
    opencv-python-headless
    freetype-py
